tutorial/openshift_definitions/02/deployment_config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: <NAMESPACE>
  name: 'monolith'
  annotations: {}
  labels:
    app: monolith
    app.kubernetes.io/component: monolith
    app.kubernetes.io/instance: monolith
    app.kubernetes.io/name: monolith
    app.kubernetes.io/part-of: monolith
    app.openshift.io/runtime-namespace: <NAMESPACE>
spec:
  selector:
    matchLabels:
      app: monolith
  replicas: 1
  template:
    metadata:
      labels:
        app: monolith
        app.kubernetes.io/component: monolith
        app.kubernetes.io/name: monolith
        deployment: monolith
    spec:
      containers:
        - name: container
          image: >-
            <DOCKER_IMAGE>
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          env: []
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  paused: false
