tutorial/openshift_definitions/02/8080_service_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolith
  namespace: maarten-playground
  labels:
    app: monolith
    app.kubernetes.io/component: monolith
    app.kubernetes.io/instance: monolith
    app.kubernetes.io/name: monolith
    app.kubernetes.io/part-of: monolith
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: monolith
    deployment: monolith
  type: ClusterIP
